Save_style global config

--- a/config.yml
+++ b/config.yml
@@ -10,7 +10,8 @@ Site:
 Config:
  Time_style: '%B %d. %Y'
  Hide_meta: True
- Archive_group_by: month
+ Archive_group_by: month        # month / year
+ Save_style: prettify           # prettify / minify/''
 
 Home:
  Page_size: 3
